# coreapp

./: .gitignore  CMakeLists.txt  README.md  build_benchmarks.bat  generate_solution.bat  run_article1.bat
.github/workflows/: ci.yml
benchmarks/: CMakeLists.txt  README.md  main_benchmarks.cpp  run_analysis.bat  run_analysis.sh  run_ui.bat  run_ui.sh
benchmarks/analysis/: README.md  __init__.py  __main__.py  allocator_capabilities.py  assemble.py  cli.py  compare.py  filters.py  ingest_summary.py  ingest_timeseries.py  models.py  plots.py  report.py  requirements.txt  ui.py  validate.py
benchmarks/analysis/tests/: __init__.py  conftest.py  test_assemble.py  test_cli.py  test_compare.py  test_ingest_summary.py  test_ingest_timeseries.py  test_report.py  test_validate.py
benchmarks/common/: allocator_capabilities.hpp  file_utils.cpp  file_utils.hpp  high_res_timer.cpp  high_res_timer.hpp  optimization_barriers.hpp  pattern_matcher.cpp  pattern_matcher.hpp  seeded_rng.cpp  seeded_rng.hpp  string_utils.cpp  string_utils.hpp
benchmarks/config/: scenario_loader.cpp  scenario_loader.hpp
benchmarks/docs/: article1_matrix.md  timing_noise_control_protocol.md
benchmarks/events/: allocation_event_adapter.cpp  allocation_event_adapter.hpp  event_bus.cpp  event_bus.hpp  event_payloads.hpp  event_sink.hpp  event_types.hpp
benchmarks/experiments/: alloc_bench_experiment.cpp  alloc_bench_experiment.hpp  article1_registry.cpp  article1_registry.hpp  null_experiment.cpp  null_experiment.hpp  simple_alloc_experiment.cpp  simple_alloc_experiment.hpp  static_matrix_registry.cpp  static_matrix_registry.hpp
benchmarks/measurement/: README.md  counter_system.cpp  counter_system.hpp  measurement_factory.cpp  measurement_factory.hpp  measurement_system.hpp  metric_collector.cpp  metric_collector.hpp  metric_descriptor.cpp  metric_descriptor.hpp  metric_value.hpp  snapshot_system.cpp  snapshot_system.hpp  timer_system.cpp  timer_system.hpp
benchmarks/output/: README.md  csv_summary_writer.cpp  csv_summary_writer.hpp  jsonl_time_series_writer.cpp  jsonl_time_series_writer.hpp  manifest_writer.cpp  manifest_writer.hpp  output_config.hpp  output_manager.cpp  output_manager.hpp  run_metadata.cpp  run_metadata.hpp
benchmarks/runner/: batch_runner.cpp  batch_runner.hpp  cli_parser.cpp  cli_parser.hpp  exit_codes.hpp  experiment_descriptor.hpp  experiment_interface.hpp  experiment_params.hpp  experiment_registry.cpp  experiment_registry.hpp  experiment_runner.cpp  experiment_runner.hpp  run_config.hpp
benchmarks/system/: environment_metadata.cpp  environment_metadata.hpp  filesystem_utils.cpp  filesystem_utils.hpp
benchmarks/tests/: test_adv_allocators.cpp  test_adv_callbacks.cpp  test_adv_distributions.cpp  test_adv_phases.cpp  test_adv_scale.cpp  test_allocator_smoke.cpp  test_batch_runner.cpp  test_cli_parser.cpp  test_edge_cases.cpp  test_event_bus.cpp  test_event_model.cpp  test_event_phase_complete.cpp  test_exit_codes.cpp  test_experiment_registry.cpp  test_helpers.hpp  test_integration.cpp  test_invariants.cpp  test_lifetime_tracker.cpp  test_measurement_systems.cpp  test_operation_stream.cpp  test_output.cpp  test_output_modes.cpp  test_pattern_matcher.cpp  test_phase_executor.cpp  test_phase_executor_acceptance_matrix.cpp  test_regression_fixes.cpp  test_runner.cpp  test_scenario_loader.cpp  test_seeded_rng.cpp  test_simple_alloc_experiment.cpp  test_tick_manager.cpp
benchmarks/workload/: lifetime_tracker.cpp  lifetime_tracker.hpp  operation_stream.cpp  operation_stream.hpp  phase_context.hpp  phase_descriptor.hpp  phase_executor.cpp  phase_executor.hpp  phase_types.hpp  tick_manager.cpp  tick_manager.hpp  workload_params.hpp
core/base/: core_api.hpp  core_assert.hpp  core_build.hpp  core_config.hpp  core_defs.hpp  core_fail.hpp  core_features.hpp  core_forward.hpp  core_inline.hpp  core_macros.hpp  core_platform.hpp  core_preprocessor.hpp  core_static_init.hpp  core_types.hpp  core_version.hpp
core/concurrency/: atomic_fence.hpp  atomic_intrinsics.hpp  atomic_ptr.hpp  atomic_u32.hpp  atomic_u64.hpp  atomic_uintptr.hpp  core_atomic.hpp  core_sync.hpp  cpu_relax.hpp  memory_order.hpp  scoped_lock.hpp  spin_mutex.hpp  tls_ptr.hpp
core/memory/: allocation_tracker.cpp  allocation_tracker.hpp  arena.hpp  bump_allocator.cpp  bump_allocator.hpp  bump_arena.cpp  bump_arena.hpp  core_allocator.cpp  core_allocator.hpp  core_memory.hpp  malloc_allocator.cpp  malloc_allocator.hpp  memory_ops.hpp  memory_traits.hpp  monotonic_arena.hpp  pool_allocator.cpp  pool_allocator.hpp  scoped_arena.hpp  segregated_list_allocator.cpp  segregated_list_allocator.hpp  stack_allocator.cpp  stack_allocator.hpp  system_allocator.cpp  system_allocator.hpp  thread_local_arena.cpp  thread_local_arena.hpp
docs/: design.md
include/coreapp/: README.md
tests/core_base/: test_core_api.cpp  test_core_api_consumer.cpp  test_core_assert.cpp  test_core_attributes.cpp  test_core_attributes_warnings.cpp  test_core_build.cpp  test_core_config.cpp  test_core_defs.cpp  test_core_features.cpp  test_core_inline.cpp  test_core_macros.cpp  test_core_platform.cpp  test_core_preprocessor.cpp  test_core_static_init.cpp  test_core_types.cpp  test_core_version.cpp
tests/core_concurrency/: test_atomic_fence.cpp  test_atomic_ptr.cpp  test_atomic_u32.cpp  test_atomic_u64.cpp  test_atomic_uintptr.cpp  test_cpu_relax.cpp  test_helpers.hpp  test_scoped_lock.cpp  test_spin_mutex.cpp  test_tls_ptr.cpp
tests/core_memory/: test_allocation_hooks.cpp  test_allocation_tracker.cpp  test_arena.cpp  test_bump_allocator.cpp  test_bump_arena.cpp  test_core_allocator.cpp  test_core_memory.cpp  test_helpers.hpp  test_malloc_allocator.cpp  test_memory_ops.cpp  test_memory_traits.cpp  test_monotonic_arena.cpp  test_pool_allocator.cpp  test_scoped_arena.cpp  test_segregated_list_allocator.cpp  test_stack_allocator.cpp  test_system_allocator.cpp  test_thread_local_arena.cpp
workspace/: .gitignore  README.md  run_analysis.bat  run_analysis.sh  run_batch.bat  run_batch.sh  run_benchmarks.bat  run_benchmarks.sh  run_ui.bat  run_ui.sh
(+147 files in other folders)
